add hero image to Home

--- a/templates/index.html
+++ b/templates/index.html
@@ -51,6 +51,13 @@
     </table>
   </div>
 </div>
+
+{% else %}
+<div class="row m-0 p-0">
+  <div class="card col-12 my-3">
+    <p class="hero"><i class="fas fa-car"></i></p>
+  </div>
+</div>
 {% endif %}
 </div>
 {% endblock %}
