--- a/templates/index.html
+++ b/templates/index.html
@@ -54,7 +54,8 @@
 
 {% else %}
 <div class="row m-0 p-0">
-  <div class="card col-12 my-3">
+  <div class="card text-center col-12 my-3">
+    <h1>My Car Administration</h1>
     <p class="hero"><i class="fas fa-car"></i></p>
   </div>
 </div>
