direct maintenance links to Home if no car is assigned (and not admin)

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -7,7 +7,7 @@
 <div class="row m-0 p-0">
     <div class="card col-12 offset-md-2 col-md-8 offset-lg-4 col-lg-4 mt-3">
         <div class="card-body row g-3 align-items-center">
-            <h3 class="card-title text-center">{{ user['username'] }}'s Profile</h3>
+            <h3 class="card-title text-center">Profile of {{ user['username'] }}</h3>
         </div>
     </div>
     <div class="card col-12 offset-md-2 col-md-8 offset-lg-4 col-lg-4 mt-3">
