fix html error: attribute data-form-method at modal handling

--- a/templates/maintain.html
+++ b/templates/maintain.html
@@ -251,7 +251,7 @@
       <div class="modal-body">This operation will remove the selected record from database without checking if any record still referencing it.</div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-mdb-dismiss="modal">Cancel</button>
-        <button type="button" class="btn btn-danger" data-mdb-dismiss="modal" formMethod='POST'>Delete</button>
+        <button type="button" class="btn btn-danger" data-mdb-dismiss="modal" data-form-method='POST'>Delete</button>
       </div>
     </div>
   </div>
