--- a/templates/profile.html
+++ b/templates/profile.html
@@ -22,7 +22,7 @@
                 <input type="password" id="password_new" name="password_new" class="form-control" 
                     minlength="5" maxlength="15" pattern="^[a-zA-Z\d]{5,15}$" 
                     {% if register %}autocomplete="new-password"{% endif %} required>
-                <label class="form-label" for="password">New Password</label>
+                <label class="form-label" for="password_new">New Password</label>
             </div>
 
             <div class="col-11 col-lg-12 text-end mt-0">
